# influxdb-haskell

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  hie.yaml  influxdb.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
.travis/: influxdb.patch
examples/: random-points.hs  random.hs  write-udp.hs
scripts/: travis.sh
src/Database/: InfluxDB.hs
src/Database/InfluxDB/: Decode.hs  Encode.hs  Format.hs  Http.hs  JSON.hs  Lens.hs  Line.hs  Manage.hs  Ping.hs  Query.hs  Stream.hs  TH.hs  Types.hs  Write.hs
src/Database/InfluxDB/Internal/: Text.hs
src/Database/InfluxDB/Types/: Internal.hs
src/Database/InfluxDB/Write/: UDP.hs
src/Network/HTTP/Client/: Compat.hs
tests/: doctests.hs  regressions.hs  test-suite.hs
