name: influxdb
version: 1.7.1.1
synopsis: Haskell client library for InfluxDB
description:
  @influxdb@ is a Haskell client library for InfluxDB.
  .
  See "Database.InfluxDB" for a quick start guide.
homepage: https://github.com/maoe/influxdb-haskell
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <me@maoe.name>
copyright: Copyright (C) 2014-2019 Mitsutoshi Aoe
category: Database
build-type: Custom
cabal-version: 1.24
tested-with:
  GHC == 8.0.2
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.1

extra-source-files:
  README.md
  CHANGELOG.md

flag examples
  description: Build examples
  default: False
  manual: True

custom-setup
 setup-depends:
      base >= 4 && < 5
    , Cabal >= 1.24
    , cabal-doctest >= 1 && < 1.1

library
  exposed-modules:
    Database.InfluxDB
    Database.InfluxDB.Format
    Database.InfluxDB.JSON
    Database.InfluxDB.Line
    Database.InfluxDB.Manage
    Database.InfluxDB.Ping
    Database.InfluxDB.Query
    Database.InfluxDB.Types
    Database.InfluxDB.Write
    Database.InfluxDB.Write.UDP
  other-modules:
    Database.InfluxDB.Internal.Text
  other-extensions:
    BangPatterns
    CPP
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    ExistentialQuantification
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    ViewPatterns
  ghc-options: -Wall
  build-depends:
      base >= 4.9 && < 4.14
    , aeson >= 0.7 && < 1.5
    , attoparsec < 0.14
    , bytestring >= 0.10 && < 0.11
    , clock >= 0.7 && < 0.9
    , containers >= 0.5 && < 0.7
    , foldl < 1.5
    , http-client >= 0.5 && < 0.7
    , http-types >= 0.8.6 && < 0.13
    , lens >= 4.9 && < 4.19
    , network >= 2.6 && < 3.2
    , optional-args >= 1.0 && < 1.1
    , scientific >= 0.3.3 && < 0.4
    , tagged >= 0.1 && < 0.9
    , text < 1.3
    , time >= 1.5 && < 1.10
    , unordered-containers < 0.3
    , vector >= 0.10 && < 0.13
  hs-source-dirs: src
  default-language: Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:
      base
    , doctest >= 0.11.3 && < 0.17
    , influxdb
    , template-haskell
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

test-suite regressions
  type: exitcode-stdio-1.0
  main-is: regressions.hs
  build-depends:
      base
    , containers
    , influxdb
    , tasty
    , tasty-hunit
    , time
    , raw-strings-qq >= 1.1 && < 1.2
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

executable influx-random-points
  if !flag(examples)
    buildable: False
  hs-source-dirs: examples
  main-is: random-points.hs
  ghc-options: -Wall
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , foldl >= 1.1.3
    , http-client
    , influxdb
    , lens
    , mwc-random
    , optional-args
    , text
    , time
    , vector
  default-language: Haskell2010

executable influx-write-udp
  if !flag(examples)
    buildable: False
  hs-source-dirs: examples
  main-is: write-udp.hs
  ghc-options: -Wall
  build-depends:
      base
    , containers
    , influxdb
    , lens
    , network
    , time
  default-language: Haskell2010

source-repository head
  type: git
  branch: develop
  location: https://github.com/maoe/influxdb-haskell.git
