cabal-version: 1.24
name: influxdb
version: 1.9.3.2
synopsis: InfluxDB client library for Haskell
description:
  @influxdb@ is an InfluxDB client library for Haskell.
  .
  See "Database.InfluxDB" for a quick start guide.
homepage: https://github.com/maoe/influxdb-haskell
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <me@maoe.name>
copyright: Copyright (C) 2014-2024 Mitsutoshi Aoe
category: Database
build-type: Custom
tested-with:
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.7
  GHC == 9.0.2
  GHC == 9.2.8
  GHC == 9.4.8
  GHC == 9.6.6
  GHC == 9.8.2
  GHC == 9.10.1

extra-source-files:
  README.md
  cabal.project

extra-doc-files:
  CHANGELOG.md

flag examples
  description: Build examples
  default: False
  manual: True

custom-setup
 setup-depends:
      base >= 4 && < 5
    , Cabal >= 1.24 && < 3.13
    , cabal-doctest >= 1 && < 1.1

library
  exposed-modules:
    Database.InfluxDB
    Database.InfluxDB.Format
    Database.InfluxDB.JSON
    Database.InfluxDB.Line
    Database.InfluxDB.Manage
    Database.InfluxDB.Ping
    Database.InfluxDB.Query
    Database.InfluxDB.Types
    Database.InfluxDB.Write
    Database.InfluxDB.Write.UDP
  other-modules:
    Database.InfluxDB.Internal.Text
  other-extensions:
    BangPatterns
    CPP
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    ExistentialQuantification
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    ViewPatterns
  ghc-options: -Wall
  build-depends:
      base >= 4.11 && < 4.21
    , aeson >= 0.7 && < 2.3
    , attoparsec < 0.15
    , attoparsec-aeson >= 2.1 && < 2.3
    , bytestring >= 0.10 && < 0.13
    , clock >= 0.7 && < 0.9
    , containers >= 0.5 && < 0.8
    , foldl < 1.5
    , http-client >= 0.5 && < 0.8
    , http-types >= 0.8.6 && < 0.13
    , lens >= 4.9 && < 5.4
    , network >= 2.6 && < 3.3
    , optional-args >= 1.0 && < 1.1
    , scientific >= 0.3.3 && < 0.4
    , tagged >= 0.1 && < 0.9
    , text < 2.2
    , time >= 1.5 && < 1.15
    , unordered-containers < 0.3
    , vector >= 0.10 && < 0.14
  hs-source-dirs: src
  default-language: Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:
      base
    , doctest >= 0.11.3 && < 0.23
    , influxdb
    , template-haskell < 2.23
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

test-suite regressions
  type: exitcode-stdio-1.0
  main-is: regressions.hs
  build-depends:
      base
    , containers
    , influxdb
    , lens
    , tasty < 1.6
    , tasty-hunit < 1.11
    , time
    , raw-strings-qq >= 1.1 && < 1.2
    , vector
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

executable influx-random-points
  if !flag(examples)
    buildable: False
  hs-source-dirs: examples
  main-is: random-points.hs
  ghc-options: -Wall
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , foldl >= 1.1.3
    , http-client
    , influxdb
    , lens
    , mwc-random
    , optional-args
    , text
    , time
    , vector
  default-language: Haskell2010

executable influx-write-udp
  if !flag(examples)
    buildable: False
  hs-source-dirs: examples
  main-is: write-udp.hs
  ghc-options: -Wall
  build-depends:
      base
    , containers
    , influxdb
    , lens
    , network
    , time
  default-language: Haskell2010

source-repository head
  type: git
  branch: develop
  location: https://github.com/maoe/influxdb-haskell.git
